fixed a minor css issue in webkit based browsers (tab labels too low in clickable tabs)

--- a/src/templates/css/wizard.css
+++ b/src/templates/css/wizard.css
@@ -59,6 +59,7 @@
 	color: #006DBA;
 	background-color: transparent;
 	border: none;
+	vertical-align: top;
 }
 .ajaxFlow .tabs li:last-child:after {
 	content: url('../images/$imageDir/spacer.gif');
